// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPalette Dropdown .renderContent should render dropdown content 1`] = `
<div
  className="components-color-picker is-alpha-disabled"
>
  <div
    className="components-color-picker__saturation"
  >
    <Pure(WithInstanceId(Saturation))
      hsl={
        Object {
          "a": 1,
          "h": 0,
          "l": 50,
          "s": 100,
        }
      }
      hsv={
        Object {
          "a": 1,
          "h": 0,
          "s": 100,
          "v": 100,
        }
      }
      onChange={[Function]}
    />
  </div>
  <div
    className="components-color-picker__body"
  >
    <div
      className="components-color-picker__controls"
    >
      <div
        className="components-color-picker__swatch"
      >
        <div
          className="components-color-picker__active"
          style={
            Object {
              "backgroundColor": "rgb(255, 0, 0)",
            }
          }
        />
      </div>
      <div
        className="components-color-picker__toggles"
      >
        <Pure(WithInstanceId(Hue))
          hsl={
            Object {
              "a": 1,
              "h": 0,
              "l": 50,
              "s": 100,
            }
          }
          onChange={[Function]}
        />
      </div>
    </div>
    <Inputs
      disableAlpha={true}
      hex="#ff0000"
      hsl={
        Object {
          "a": 1,
          "h": 0,
          "l": 50,
          "s": 100,
        }
      }
      onChange={[Function]}
      rgb={
        Object {
          "a": 1,
          "b": 0,
          "g": 0,
          "r": 255,
        }
      }
    />
  </div>
</div>
`;

exports[`ColorPalette Dropdown .renderToggle should render dropdown content 1`] = `
<LinkButton
  aria-expanded={true}
  aria-haspopup="true"
  aria-label="Custom color picker"
  as="button"
  className="components-button is-link"
  hasIcon={false}
  hasText={false}
  onClick={[MockFunction]}
  type="button"
>
  Custom color
</LinkButton>
`;

exports[`ColorPalette Dropdown should render it correctly 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  margin: 0;
  border: 0;
  cursor: pointer;
  -webkit-appearance: none;
  background: none;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 6px 12px;
  border-radius: 2px;
  color: #1e1e1e;
  margin: 0;
  padding: 0;
  box-shadow: none;
  border: 0;
  border-radius: 0;
  background: none;
  outline: none;
  text-align: left;
  color: #0073aa;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: border,background,color;
  transition-property: border,background,color;
  -webkit-transition-duration: 0.05s;
  transition-duration: 0.05s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  height: auto;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-0 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

.emotion-0[aria-expanded='true'],
.emotion-0:hover {
  color: var( --wp-admin-theme-color );
}

.emotion-0[aria-disabled='true']:hover {
  color: initial;
}

.emotion-0:focus:not(:disabled ) {
  box-shadow: 0 0 0 1.5px var( --wp-admin-theme-color );
  outline: 1px solid transparent;
}

.emotion-0:not([aria-disabled="true"]):active {
  color: inherit;
}

.emotion-0:disabled,
.emotion-0[aria-disabled="true"] {
  cursor: default;
  opacity: 0.3;
}

.emotion-0 svg {
  fill: currentColor;
  outline: none;
}

.emotion-0 .components-visually-hidden {
  height: auto;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-0 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

.emotion-0:hover:not(:disabled ),
.emotion-0:active:not(:disabled ) {
  color: #00a0d2;
  box-shadow: none;
}

.emotion-0:focus {
  color: #124964;
  box-shadow: 0 0 0 1px #5b9dd9,0 0 1.5px 1px rgba( 30,140,190,0.8 );
}

<Dropdown
  className="components-circular-option-picker__dropdown-link-action"
  contentClassName="components-color-palette__picker"
  renderContent={[Function]}
  renderToggle={[Function]}
>
  <div
    className="components-dropdown components-circular-option-picker__dropdown-link-action"
  >
    <ForwardRef(Button)
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Custom color picker"
      isLink={true}
      onClick={[Function]}
    >
      <LinkButton
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Custom color picker"
        as="button"
        className="components-button is-link"
        hasIcon={false}
        hasText={false}
        onClick={[Function]}
        type="button"
      >
        <button
          aria-expanded={false}
          aria-haspopup="true"
          aria-label="Custom color picker"
          className="components-button is-link emotion-0 emotion-1"
          onClick={[Function]}
          type="button"
        >
          Custom color
        </button>
      </LinkButton>
    </ForwardRef(Button)>
  </div>
</Dropdown>
`;

exports[`ColorPalette should allow disabling custom color picker 1`] = `
<CircularOptionPicker
  actions={
    <React.Fragment>
      <ButtonAction
        onClick={[Function]}
      >
        Clear
      </ButtonAction>
    </React.Fragment>
  }
  options={
    Array [
      <Option
        aria-label="Color: red"
        isSelected={true}
        onClick={[Function]}
        selectedIconProps={
          Object {
            "fill": "#000000",
          }
        }
        style={
          Object {
            "backgroundColor": "#f00",
            "color": "#f00",
          }
        }
        tooltipText="red"
      />,
      <Option
        aria-label="Color: white"
        isSelected={false}
        onClick={[Function]}
        selectedIconProps={Object {}}
        style={
          Object {
            "backgroundColor": "#fff",
            "color": "#fff",
          }
        }
        tooltipText="white"
      />,
      <Option
        aria-label="Color: blue"
        isSelected={false}
        onClick={[Function]}
        selectedIconProps={Object {}}
        style={
          Object {
            "backgroundColor": "#00f",
            "color": "#00f",
          }
        }
        tooltipText="blue"
      />,
    ]
  }
/>
`;

exports[`ColorPalette should render a dynamic toolbar of colors 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  margin: 0;
  border: 0;
  cursor: pointer;
  -webkit-appearance: none;
  background: none;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 6px 12px;
  border-radius: 2px;
  color: #1e1e1e;
  color: #fff;
  background: #1e1e1e;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-0 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

.emotion-0[aria-expanded='true'],
.emotion-0:hover {
  color: var( --wp-admin-theme-color );
}

.emotion-0[aria-disabled='true']:hover {
  color: initial;
}

.emotion-0:focus:not(:disabled ) {
  box-shadow: 0 0 0 1.5px var( --wp-admin-theme-color );
  outline: 1px solid transparent;
}

.emotion-0:not([aria-disabled="true"]):active {
  color: inherit;
}

.emotion-0:disabled,
.emotion-0[aria-disabled="true"] {
  cursor: default;
  opacity: 0.3;
}

.emotion-0 svg {
  fill: currentColor;
  outline: none;
}

.emotion-0 .components-visually-hidden {
  height: auto;
}

.emotion-0:focus:not(:disabled ) {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1.5px var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-0:hover:not(:disabled ) {
  color: #fff;
  background: #1e1e1e;
}

.emotion-0[aria-expanded='true'],
.emotion-0:hover {
  color: #fff;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  margin: 0;
  border: 0;
  cursor: pointer;
  -webkit-appearance: none;
  background: none;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 6px 12px;
  border-radius: 2px;
  color: #1e1e1e;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-2 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

.emotion-2[aria-expanded='true'],
.emotion-2:hover {
  color: var( --wp-admin-theme-color );
}

.emotion-2[aria-disabled='true']:hover {
  color: initial;
}

.emotion-2:focus:not(:disabled ) {
  box-shadow: 0 0 0 1.5px var( --wp-admin-theme-color );
  outline: 1px solid transparent;
}

.emotion-2:not([aria-disabled="true"]):active {
  color: inherit;
}

.emotion-2:disabled,
.emotion-2[aria-disabled="true"] {
  cursor: default;
  opacity: 0.3;
}

.emotion-2 svg {
  fill: currentColor;
  outline: none;
}

.emotion-2 .components-visually-hidden {
  height: auto;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  margin: 0;
  border: 0;
  cursor: pointer;
  -webkit-appearance: none;
  background: none;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 6px 12px;
  border-radius: 2px;
  color: #1e1e1e;
  margin: 0;
  padding: 0;
  box-shadow: none;
  border: 0;
  border-radius: 0;
  background: none;
  outline: none;
  text-align: left;
  color: #0073aa;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: border,background,color;
  transition-property: border,background,color;
  -webkit-transition-duration: 0.05s;
  transition-duration: 0.05s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  height: auto;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-6 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

.emotion-6[aria-expanded='true'],
.emotion-6:hover {
  color: var( --wp-admin-theme-color );
}

.emotion-6[aria-disabled='true']:hover {
  color: initial;
}

.emotion-6:focus:not(:disabled ) {
  box-shadow: 0 0 0 1.5px var( --wp-admin-theme-color );
  outline: 1px solid transparent;
}

.emotion-6:not([aria-disabled="true"]):active {
  color: inherit;
}

.emotion-6:disabled,
.emotion-6[aria-disabled="true"] {
  cursor: default;
  opacity: 0.3;
}

.emotion-6 svg {
  fill: currentColor;
  outline: none;
}

.emotion-6 .components-visually-hidden {
  height: auto;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-6 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

.emotion-6:hover:not(:disabled ),
.emotion-6:active:not(:disabled ) {
  color: #00a0d2;
  box-shadow: none;
}

.emotion-6:focus {
  color: #124964;
  box-shadow: 0 0 0 1px #5b9dd9,0 0 1.5px 1px rgba( 30,140,190,0.8 );
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  margin: 0;
  border: 0;
  cursor: pointer;
  -webkit-appearance: none;
  background: none;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  height: 36px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 6px 12px;
  border-radius: 2px;
  color: #1e1e1e;
  height: 24px;
  line-height: 22px;
  padding: 0 8px;
  font-size: 11px;
  box-shadow: inset 0 0 0 1px var( --wp-admin-theme-color );
  outline: 1px solid transparent;
  white-space: nowrap;
  color: var( --wp-admin-theme-color );
  background: transparent;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-8 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

.emotion-8[aria-expanded='true'],
.emotion-8:hover {
  color: var( --wp-admin-theme-color );
}

.emotion-8[aria-disabled='true']:hover {
  color: initial;
}

.emotion-8:focus:not(:disabled ) {
  box-shadow: 0 0 0 1.5px var( --wp-admin-theme-color );
  outline: 1px solid transparent;
}

.emotion-8:not([aria-disabled="true"]):active {
  color: inherit;
}

.emotion-8:disabled,
.emotion-8[aria-disabled="true"] {
  cursor: default;
  opacity: 0.3;
}

.emotion-8 svg {
  fill: currentColor;
  outline: none;
}

.emotion-8 .components-visually-hidden {
  height: auto;
}

.emotion-8:active:not(:disabled ) {
  background: #e0e0e0;
  color: var( --wp-admin-theme-color-darker-10 );
  box-shadow: none;
}

.emotion-8:hover:not(:disabled ) {
  color: var( --wp-admin-theme-color-darker-10 );
  box-shadow: inset 0 0 0 1px var( --wp-admin-theme-color-darker-10 );
}

.emotion-8:disabled,
.emotion-8[aria-disabled='true'],
.emotion-8[aria-disabled='true']:hover {
  color: #828282;
  background: #eaeaea;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  opacity: 1;
  box-shadow: none;
}

<ColorPalette
  colors={
    Array [
      Object {
        "color": "#f00",
        "name": "red",
      },
      Object {
        "color": "#fff",
        "name": "white",
      },
      Object {
        "color": "#00f",
        "name": "blue",
      },
    ]
  }
  onChange={[MockFunction]}
  value="#f00"
>
  <CircularOptionPicker
    actions={
      <React.Fragment>
        <DropdownLinkAction
          buttonProps={
            Object {
              "aria-label": "Custom color picker",
            }
          }
          dropdownProps={
            Object {
              "contentClassName": "components-color-palette__picker",
              "renderContent": [Function],
            }
          }
          linkText="Custom color"
        />
        <ButtonAction
          onClick={[Function]}
        >
          Clear
        </ButtonAction>
      </React.Fragment>
    }
    options={
      Array [
        <Option
          aria-label="Color: red"
          isSelected={true}
          onClick={[Function]}
          selectedIconProps={
            Object {
              "fill": "#000000",
            }
          }
          style={
            Object {
              "backgroundColor": "#f00",
              "color": "#f00",
            }
          }
          tooltipText="red"
        />,
        <Option
          aria-label="Color: white"
          isSelected={false}
          onClick={[Function]}
          selectedIconProps={Object {}}
          style={
            Object {
              "backgroundColor": "#fff",
              "color": "#fff",
            }
          }
          tooltipText="white"
        />,
        <Option
          aria-label="Color: blue"
          isSelected={false}
          onClick={[Function]}
          selectedIconProps={Object {}}
          style={
            Object {
              "backgroundColor": "#00f",
              "color": "#00f",
            }
          }
          tooltipText="blue"
        />,
      ]
    }
  >
    <div
      className="components-circular-option-picker"
    >
      <div
        className="components-circular-option-picker__swatches"
      >
        <Option
          aria-label="Color: red"
          isSelected={true}
          key="#f00"
          onClick={[Function]}
          selectedIconProps={
            Object {
              "fill": "#000000",
            }
          }
          style={
            Object {
              "backgroundColor": "#f00",
              "color": "#f00",
            }
          }
          tooltipText="red"
        >
          <div
            className="components-circular-option-picker__option-wrapper"
          >
            <Tooltip
              text="red"
            >
              <ForwardRef(Button)
                aria-label="Color: red"
                className="components-circular-option-picker__option"
                isPressed={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "backgroundColor": "#f00",
                    "color": "#f00",
                  }
                }
              >
                <BaseButton
                  aria-label="Color: red"
                  aria-pressed={true}
                  as="button"
                  className="components-button components-circular-option-picker__option is-pressed"
                  hasIcon={false}
                  hasText={false}
                  isPressed={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#f00",
                      "color": "#f00",
                    }
                  }
                  type="button"
                >
                  <button
                    aria-label="Color: red"
                    aria-pressed={true}
                    className="components-button components-circular-option-picker__option is-pressed emotion-0 emotion-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#f00",
                        "color": "#f00",
                      }
                    }
                    type="button"
                  />
                </BaseButton>
              </ForwardRef(Button)>
            </Tooltip>
            <Icon
              fill="#000000"
              icon={
                <SVG
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <Path
                    d="M18.3 5.6L9.9 16.9l-4.6-3.4-.9 1.2 5.8 4.3 9.3-12.6z"
                  />
                </SVG>
              }
            >
              <SVG
                fill="#000000"
                height={24}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="#000000"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <Path
                    d="M18.3 5.6L9.9 16.9l-4.6-3.4-.9 1.2 5.8 4.3 9.3-12.6z"
                  >
                    <path
                      d="M18.3 5.6L9.9 16.9l-4.6-3.4-.9 1.2 5.8 4.3 9.3-12.6z"
                    />
                  </Path>
                </svg>
              </SVG>
            </Icon>
          </div>
        </Option>
        <Option
          aria-label="Color: white"
          isSelected={false}
          key="#fff"
          onClick={[Function]}
          selectedIconProps={Object {}}
          style={
            Object {
              "backgroundColor": "#fff",
              "color": "#fff",
            }
          }
          tooltipText="white"
        >
          <div
            className="components-circular-option-picker__option-wrapper"
          >
            <Tooltip
              text="white"
            >
              <ForwardRef(Button)
                aria-label="Color: white"
                className="components-circular-option-picker__option"
                isPressed={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "color": "#fff",
                  }
                }
              >
                <BaseButton
                  aria-label="Color: white"
                  aria-pressed={false}
                  as="button"
                  className="components-button components-circular-option-picker__option"
                  hasIcon={false}
                  hasText={false}
                  isPressed={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#fff",
                      "color": "#fff",
                    }
                  }
                  type="button"
                >
                  <button
                    aria-label="Color: white"
                    aria-pressed={false}
                    className="components-button components-circular-option-picker__option emotion-2 emotion-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#fff",
                        "color": "#fff",
                      }
                    }
                    type="button"
                  />
                </BaseButton>
              </ForwardRef(Button)>
            </Tooltip>
          </div>
        </Option>
        <Option
          aria-label="Color: blue"
          isSelected={false}
          key="#00f"
          onClick={[Function]}
          selectedIconProps={Object {}}
          style={
            Object {
              "backgroundColor": "#00f",
              "color": "#00f",
            }
          }
          tooltipText="blue"
        >
          <div
            className="components-circular-option-picker__option-wrapper"
          >
            <Tooltip
              text="blue"
            >
              <ForwardRef(Button)
                aria-label="Color: blue"
                className="components-circular-option-picker__option"
                isPressed={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "backgroundColor": "#00f",
                    "color": "#00f",
                  }
                }
              >
                <BaseButton
                  aria-label="Color: blue"
                  aria-pressed={false}
                  as="button"
                  className="components-button components-circular-option-picker__option"
                  hasIcon={false}
                  hasText={false}
                  isPressed={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#00f",
                      "color": "#00f",
                    }
                  }
                  type="button"
                >
                  <button
                    aria-label="Color: blue"
                    aria-pressed={false}
                    className="components-button components-circular-option-picker__option emotion-2 emotion-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#00f",
                        "color": "#00f",
                      }
                    }
                    type="button"
                  />
                </BaseButton>
              </ForwardRef(Button)>
            </Tooltip>
          </div>
        </Option>
      </div>
      <div
        className="components-circular-option-picker__custom-clear-wrapper"
      >
        <DropdownLinkAction
          buttonProps={
            Object {
              "aria-label": "Custom color picker",
            }
          }
          dropdownProps={
            Object {
              "contentClassName": "components-color-palette__picker",
              "renderContent": [Function],
            }
          }
          linkText="Custom color"
        >
          <Dropdown
            className="components-circular-option-picker__dropdown-link-action"
            contentClassName="components-color-palette__picker"
            renderContent={[Function]}
            renderToggle={[Function]}
          >
            <div
              className="components-dropdown components-circular-option-picker__dropdown-link-action"
            >
              <ForwardRef(Button)
                aria-expanded={false}
                aria-haspopup="true"
                aria-label="Custom color picker"
                isLink={true}
                onClick={[Function]}
              >
                <LinkButton
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Custom color picker"
                  as="button"
                  className="components-button is-link"
                  hasIcon={false}
                  hasText={false}
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup="true"
                    aria-label="Custom color picker"
                    className="components-button is-link emotion-6 emotion-7"
                    onClick={[Function]}
                    type="button"
                  >
                    Custom color
                  </button>
                </LinkButton>
              </ForwardRef(Button)>
            </div>
          </Dropdown>
        </DropdownLinkAction>
        <ButtonAction
          onClick={[Function]}
        >
          <ForwardRef(Button)
            className="components-circular-option-picker__clear"
            isSecondary={true}
            isSmall={true}
            onClick={[Function]}
          >
            <SecondaryButton
              as="button"
              className="components-button components-circular-option-picker__clear is-secondary is-small"
              hasIcon={false}
              hasText={false}
              isSmall={true}
              onClick={[Function]}
              type="button"
            >
              <button
                className="components-button components-circular-option-picker__clear is-secondary is-small emotion-8 emotion-9"
                onClick={[Function]}
                type="button"
              >
                Clear
              </button>
            </SecondaryButton>
          </ForwardRef(Button)>
        </ButtonAction>
      </div>
    </div>
  </CircularOptionPicker>
</ColorPalette>
`;
